# loro

./: .gitignore  package.json  wasm-size-baseline.json
.changeset/: jsonpath-opt-in-subpath.md
crates/loro-internal/: Cargo.toml
crates/loro-internal/src/: state.rs
crates/loro-wasm/: Cargo.toml  README.md  package.json  rollup.config.mjs
crates/loro-wasm/jsonpath/: package.json
crates/loro-wasm/scripts/: build.ts  post-rollup.ts
crates/loro-wasm/src/: lib.rs
crates/loro-wasm/tests/: awareness.test.ts  basic.test.ts  ephemeral.test.ts  jsonpath.test.ts
plans/: 20260517-wasm-size-optimization.md
scripts/: wasm-size-bench.ts
