[package]
name = "loro-wasm"
version = "1.12.1"
edition = "2021"
publish = false
repository = "https://github.com/loro-dev/loro/"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.release]
release = false

[dependencies]
js-sys = "0.3.60"
loro-internal = { path = "../loro-internal", features = [
    "wasm",
    "counter",
] }
loro-common = { path = "../loro-common" }
loro-delta = { path = "../delta" }
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = { version = "^0.6.5" }
wasm-bindgen-derive = "0.2.1"
serde = { workspace = true }
rle = { path = "../rle", package = "loro-rle" }
tracing-wasm = { version = "0.2.1", optional = true }
parking_lot = "0.12.5"

[features]
# `jsonpath` is on by default so the published `loro-crdt` build is
# unchanged. Building with `--no-default-features` drops the `pest`
# parser + JSONPath grammar (~65 KB gzip). A future `loro-crdt-jsonpath`
# companion package will ship the full build for users who need it.
default = ["jsonpath"]
jsonpath = ["loro-internal/jsonpath"]
# Compiles `setDebug()` and links `tracing-wasm` (plus its
# `tracing-subscriber` / `sharded-slab` graph). Off by default so the
# published `loro-crdt` artifact does not carry the console subscriber.
debug = ["dep:tracing-wasm"]
