[package]
name = "loro-wasm"
version = "1.12.1"
edition = "2021"
publish = false
repository = "https://github.com/loro-dev/loro/"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.release]
release = false

[dependencies]
js-sys = "0.3.60"
loro-internal = { path = "../loro-internal", features = [
    "wasm",
    "counter",
] }
loro-common = { path = "../loro-common" }
loro-delta = { path = "../delta" }
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = { version = "^0.6.5" }
wasm-bindgen-derive = "0.2.1"
serde = { workspace = true }
rle = { path = "../rle", package = "loro-rle" }
tracing-wasm = { version = "0.2.1", optional = true }
# `release_max_level_off` compile-time-elides every `tracing` macro in
# release builds. loro-internal uses `tracing` heavily (info_span!,
# instrument, warn); this strips that callsite machinery from the wasm.
# Scoped to loro-wasm so crates.io consumers of loro/loro-internal keep
# full tracing — cargo feature unification propagates it down only for
# the wasm build.
tracing = { version = "0.1", features = ["release_max_level_off"] }
parking_lot = "0.12.5"

[features]
# `jsonpath` is OFF by default: the published `loro-crdt` entry point is
# the lean build (no `pest` parser / JSONPath grammar, ~66 KB gzip
# smaller). The `loro-crdt/jsonpath` subpath ships a separate artifact
# built with this feature on — see scripts/build.ts and the `jsonpath/`
# package directory.
default = []
jsonpath = ["loro-internal/jsonpath"]
# Compiles `setDebug()` and links `tracing-wasm` (plus its
# `tracing-subscriber` / `sharded-slab` graph). Off by default so the
# published `loro-crdt` artifact does not carry the console subscriber.
debug = ["dep:tracing-wasm"]
